# modelsquare

./: .env  .env.example  .env.liangping  .env.local  .env.production  .gitignore  1.txt  BRAND_INTEGRATION_GUIDE.md  BRAND_SYSTEM_SUMMARY.md  COMPLETE_FIX_SUMMARY.md  LOCK_FILE_FIX.md  QUICK_FIX.md  README.md  TYPE_COMPATIBILITY_FIX.md  docker-compose-deploy.yml  docker-compose.yml  harbor_push.sh  run.sh
ProjectDescription/: AGENTS.md  MVP_MILESTONE_1.md  MVP_MILESTONE_2.md  PRD.md  (+3 more)
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 003_add_video_tasks_table.py  004_add_api_keys_tables.py  005_change_video_size_bigint.py  006_add_owlv2_network_type.py  007_add_original_path_to_video_tasks.py  008_add_hls_columns_to_video_tasks.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: auth.py  health.py  inference.py  models.py  openapi.py  router.py  stream.py  upload.py
backend/app/core/: config.py  database.py  email_service.py  frame_renderer.py  gpu_array.py  gpu_manager.py  hls_encoder.py  minio.py  model_adapter.py  owl_inference.py  redis.py  security.py  stream_inference.py  tensorrt_converter.py  triton.py  triton_repository.py  video_inference.py  vllm_client.py
backend/app/models/: __init__.py  model.py  user.py
backend/app/schemas/: inference.py  model.py  upload.py  user.py
backend/tests/: __init__.py  conftest.py  test_api_with_mocks.py  test_auth.py  test_config.py  test_health.py  test_inference.py  test_main.py  test_models.py  test_openapi.py  test_security.py
(+78 files in other folders)
